Remove white space between announcement and trending section
Put both of them in one container to remove the white space. Refactor code in dashboard div using semantic
tags. Use section tag for the content. Within section tag, wrap project
section with main tag and wrap announcement and trending section with
aside tag.

--- a/index.html
+++ b/index.html
@@ -92,126 +92,140 @@
                 </div>
             </header>
 
-            <main id="main-content">
-                <div id="project-section">
-                    <h2 class="section-title">Projects</h2>
-                    <div id="projects">
-                        <div class="project">
-                            <h3>Project 1</h3>
-                            <p>
-                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Id, quos? Lorem ipsum dolor sit
-                                amet. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Obcaecati, explicabo?
-                            </p>
-                            <div class="options">
-                                <img src="https://img.icons8.com/material-outlined/128/000000/star--v2.png"
-                                    class="icon" />
-                                <img src="https://img.icons8.com/material-outlined/128/000000/visible--v1.png"
-                                    class="icon" />
-                                <img src="https://img.icons8.com/material-sharp/128/000000/github.png" class="icon" />
+            <section id="content">
+                <main>
+                    <div id="project-section">
+                        <h2 class="section-title">Projects</h2>
+                        <div id="projects">
+                            <div class="project">
+                                <h3>Project 1</h3>
+                                <p>
+                                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Id, quos? Lorem ipsum dolor
+                                    sit
+                                    amet. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Obcaecati,
+                                    explicabo?
+                                </p>
+                                <div class="options">
+                                    <img src="https://img.icons8.com/material-outlined/128/000000/star--v2.png"
+                                        class="icon" />
+                                    <img src="https://img.icons8.com/material-outlined/128/000000/visible--v1.png"
+                                        class="icon" />
+                                    <img src="https://img.icons8.com/material-sharp/128/000000/github.png"
+                                        class="icon" />
+                                </div>
                             </div>
-                        </div>
-                        <div class="project">
-                            <h3>Project 2</h3>
-                            <p>
-                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Id, quos? Lorem ipsum dolor sit
-                                amet. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Obcaecati, explicabo?
-                            </p>
-                            <div class="options">
-                                <img src="https://img.icons8.com/material-outlined/128/000000/star--v2.png"
-                                    class="icon" />
-                                <img src="https://img.icons8.com/material-outlined/128/000000/visible--v1.png"
-                                    class="icon" />
-                                <img src="https://img.icons8.com/material-sharp/128/000000/github.png" class="icon" />
+                            <div class="project">
+                                <h3>Project 2</h3>
+                                <p>
+                                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Id, quos? Lorem ipsum dolor
+                                    sit
+                                    amet. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Obcaecati,
+                                    explicabo?
+                                </p>
+                                <div class="options">
+                                    <img src="https://img.icons8.com/material-outlined/128/000000/star--v2.png"
+                                        class="icon" />
+                                    <img src="https://img.icons8.com/material-outlined/128/000000/visible--v1.png"
+                                        class="icon" />
+                                    <img src="https://img.icons8.com/material-sharp/128/000000/github.png"
+                                        class="icon" />
+                                </div>
                             </div>
-                        </div>
-                        <div class="project">
-                            <h3>Project 3</h3>
-                            <p>
-                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Id, quos? Lorem ipsum dolor sit
-                                amet. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Obcaecati, explicabo?
-                            </p>
-                            <div class="options">
-                                <img src="https://img.icons8.com/material-outlined/128/000000/star--v2.png"
-                                    class="icon" />
-                                <img src="https://img.icons8.com/material-outlined/128/000000/visible--v1.png"
-                                    class="icon" />
-                                <img src="https://img.icons8.com/material-sharp/128/000000/github.png" class="icon" />
+                            <div class="project">
+                                <h3>Project 3</h3>
+                                <p>
+                                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Id, quos? Lorem ipsum dolor
+                                    sit
+                                    amet. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Obcaecati,
+                                    explicabo?
+                                </p>
+                                <div class="options">
+                                    <img src="https://img.icons8.com/material-outlined/128/000000/star--v2.png"
+                                        class="icon" />
+                                    <img src="https://img.icons8.com/material-outlined/128/000000/visible--v1.png"
+                                        class="icon" />
+                                    <img src="https://img.icons8.com/material-sharp/128/000000/github.png"
+                                        class="icon" />
+                                </div>
                             </div>
-                        </div>
-                        <div class="project">
-                            <h3>Project 4</h3>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Id, quos? Lorem ipsum dolor sit
-                                amet. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Obcaecati, explicabo?
-                            </p>
-                            <div class="options">
-                                <img src="https://img.icons8.com/material-outlined/128/000000/star--v2.png"
-                                    class="icon" />
-                                <img src="https://img.icons8.com/material-outlined/128/000000/visible--v1.png"
-                                    class="icon" />
-                                <img src="https://img.icons8.com/material-sharp/128/000000/github.png" class="icon" />
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-                <div id="announcement-section">
-                    <h2 class="section-title">Announcements</h2>
-                    <div id="announcements">
-                        <div class="announcement">
-                            <h3>Site Maintenance</h3>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Id, quos? Lorem ipsum dolor sit
-                                amet.</p>
-                        </div>
-                        <div class="announcement">
-                            <h3>Community Share Day</h3>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Id, quos? Lorem ipsum dolor sit
-                                amet.</p>
-                        </div>
-                        <div class="announcement">
-                            <h3>Update Privacy Policy</h3>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Id, quos? Lorem ipsum dolor sit
-                                amet.</p>
-                        </div>
-                    </div>
-                </div>
-
-                <div id="trending-section">
-                    <h2 class="section-title">Trending</h2>
-                    <div id="trending-profiles">
-                        <div class="profile trending-profile">
-                            <div class="profile-picture">
-                                <img src="./images/one-eyed.png" alt="">
-                            </div>
-                            <div class="trending-profile-details">
-                                <p>Morgan</p>
-                                <p>Lorem ipsum dolor.</p>
-                            </div>
-                        </div>
-                        <div class="profile trending-profile">
-                            <div class="profile-picture">
-                                <img src="./images/five-eyed.png" alt="">
-                            </div>
-                            <div class="trending-profile-details">
-                                <p>Morgan</p>
-                                <p>Lorem ipsum dolor.</p>
-                            </div>
-                        </div>
-                        <div class="profile trending-profile">
-                            <div class="profile-picture">
-                                <img src="./images/zipper-mouth.png" alt="">
-                            </div>
-                            <div class="trending-profile-details">
-                                <p>Morgan</p>
-                                <p>Lorem ipsum dolor.</p>
+                            <div class="project">
+                                <h3>Project 4</h3>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Id, quos? Lorem ipsum dolor
+                                    sit
+                                    amet. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Obcaecati,
+                                    explicabo?
+                                </p>
+                                <div class="options">
+                                    <img src="https://img.icons8.com/material-outlined/128/000000/star--v2.png"
+                                        class="icon" />
+                                    <img src="https://img.icons8.com/material-outlined/128/000000/visible--v1.png"
+                                        class="icon" />
+                                    <img src="https://img.icons8.com/material-sharp/128/000000/github.png"
+                                        class="icon" />
+                                </div>
                             </div>
                         </div>
                     </div>
-                </div>
-
-            </main>
-
+                </main>
+                <aside>
+                    <div id="announcement-section">
+                        <h2 class="section-title">Announcements</h2>
+                        <div id="announcements">
+                            <div class="announcement">
+                                <h3>Site Maintenance</h3>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Id, quos? Lorem ipsum dolor
+                                    sit
+                                    amet.</p>
+                            </div>
+                            <div class="announcement">
+                                <h3>Community Share Day</h3>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Id, quos? Lorem ipsum dolor
+                                    sit
+                                    amet.</p>
+                            </div>
+                            <div class="announcement">
+                                <h3>Update Privacy Policy</h3>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Id, quos? Lorem ipsum dolor
+                                    sit
+                                    amet.</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div id="trending-section">
+                        <h2 class="section-title">Trending</h2>
+                        <div id="trending-profiles">
+                            <div class="profile trending-profile">
+                                <div class="profile-picture">
+                                    <img src="./images/one-eyed.png" alt="">
+                                </div>
+                                <div class="trending-profile-details">
+                                    <p>Morgan</p>
+                                    <p>Lorem ipsum dolor.</p>
+                                </div>
+                            </div>
+                            <div class="profile trending-profile">
+                                <div class="profile-picture">
+                                    <img src="./images/five-eyed.png" alt="">
+                                </div>
+                                <div class="trending-profile-details">
+                                    <p>Morgan</p>
+                                    <p>Lorem ipsum dolor.</p>
+                                </div>
+                            </div>
+                            <div class="profile trending-profile">
+                                <div class="profile-picture">
+                                    <img src="./images/zipper-mouth.png" alt="">
+                                </div>
+                                <div class="trending-profile-details">
+                                    <p>Morgan</p>
+                                    <p>Lorem ipsum dolor.</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </aside>
+            </section>
         </div>
-
     </div>
 </body>
 
