--- a/index.html
+++ b/index.html
@@ -164,6 +164,38 @@
                                         class="icon" />
                                 </div>
                             </div>
+                            <div class="project">
+                                <h3>Project 5</h3>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Id, quos? Lorem ipsum dolor
+                                    sit
+                                    amet. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Obcaecati,
+                                    explicabo?
+                                </p>
+                                <div class="options">
+                                    <img src="https://img.icons8.com/material-outlined/128/000000/star--v2.png"
+                                        class="icon" />
+                                    <img src="https://img.icons8.com/material-outlined/128/000000/visible--v1.png"
+                                        class="icon" />
+                                    <img src="https://img.icons8.com/material-sharp/128/000000/github.png"
+                                        class="icon" />
+                                </div>
+                            </div>
+                            <div class="project">
+                                <h3>Project 6</h3>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Id, quos? Lorem ipsum dolor
+                                    sit
+                                    amet. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Obcaecati,
+                                    explicabo?
+                                </p>
+                                <div class="options">
+                                    <img src="https://img.icons8.com/material-outlined/128/000000/star--v2.png"
+                                        class="icon" />
+                                    <img src="https://img.icons8.com/material-outlined/128/000000/visible--v1.png"
+                                        class="icon" />
+                                    <img src="https://img.icons8.com/material-sharp/128/000000/github.png"
+                                        class="icon" />
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </main>
@@ -205,7 +237,7 @@
                             </div>
                             <div class="profile trending-profile">
                                 <div class="profile-picture">
-                                    <img src="./images/five-eyed.png" alt="">
+                                    <img src="./images/yellow-one-eyed.png" alt="">
                                 </div>
                                 <div class="trending-profile-details">
                                     <p>Morgan</p>
@@ -215,6 +247,15 @@
                             <div class="profile trending-profile">
                                 <div class="profile-picture">
                                     <img src="./images/zipper-mouth.png" alt="">
+                                </div>
+                                <div class="trending-profile-details">
+                                    <p>Morgan</p>
+                                    <p>Lorem ipsum dolor.</p>
+                                </div>
+                            </div>
+                            <div class="profile trending-profile">
+                                <div class="profile-picture">
+                                    <img src="./images/five-eyed.png" alt="">
                                 </div>
                                 <div class="trending-profile-details">
                                     <p>Morgan</p>
