--- a/index.html
+++ b/index.html
@@ -93,108 +93,100 @@
             </header>
 
             <section id="content">
-                <main>
-                    <div id="project-section">
-                        <h2 class="section-title">Projects</h2>
-                        <div id="projects">
-                            <div class="project">
-                                <h3>Project 1</h3>
-                                <p>
-                                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Id, quos? Lorem ipsum dolor
-                                    sit
-                                    amet. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Obcaecati,
-                                    explicabo?
-                                </p>
-                                <div class="options">
-                                    <img src="https://img.icons8.com/material-outlined/128/000000/star--v2.png"
-                                        class="icon" />
-                                    <img src="https://img.icons8.com/material-outlined/128/000000/visible--v1.png"
-                                        class="icon" />
-                                    <img src="https://img.icons8.com/material-sharp/128/000000/github.png"
-                                        class="icon" />
-                                </div>
+                <main id="project-section">
+                    <h2 class="section-title">Projects</h2>
+                    <div id="projects">
+                        <div class="project">
+                            <h3>Super Cool Project</h3>
+                            <p>
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Id, quos? Lorem ipsum dolor
+                                sit
+                                amet. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Obcaecati,
+                                explicabo?
+                            </p>
+                            <div class="options">
+                                <img src="https://img.icons8.com/material-outlined/128/000000/star--v2.png"
+                                    class="icon" />
+                                <img src="https://img.icons8.com/material-outlined/128/000000/visible--v1.png"
+                                    class="icon" />
+                                <img src="https://img.icons8.com/material-sharp/128/000000/github.png" class="icon" />
                             </div>
-                            <div class="project">
-                                <h3>Project 2</h3>
-                                <p>
-                                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Id, quos? Lorem ipsum dolor
-                                    sit
-                                    amet. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Obcaecati,
-                                    explicabo?
-                                </p>
-                                <div class="options">
-                                    <img src="https://img.icons8.com/material-outlined/128/000000/star--v2.png"
-                                        class="icon" />
-                                    <img src="https://img.icons8.com/material-outlined/128/000000/visible--v1.png"
-                                        class="icon" />
-                                    <img src="https://img.icons8.com/material-sharp/128/000000/github.png"
-                                        class="icon" />
-                                </div>
+                        </div>
+                        <div class="project">
+                            <h3>Less Cool Project</h3>
+                            <p>
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Id, quos? Lorem ipsum dolor
+                                sit
+                                amet. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Obcaecati,
+                                explicabo?
+                            </p>
+                            <div class="options">
+                                <img src="https://img.icons8.com/material-outlined/128/000000/star--v2.png"
+                                    class="icon" />
+                                <img src="https://img.icons8.com/material-outlined/128/000000/visible--v1.png"
+                                    class="icon" />
+                                <img src="https://img.icons8.com/material-sharp/128/000000/github.png" class="icon" />
                             </div>
-                            <div class="project">
-                                <h3>Project 3</h3>
-                                <p>
-                                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Id, quos? Lorem ipsum dolor
-                                    sit
-                                    amet. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Obcaecati,
-                                    explicabo?
-                                </p>
-                                <div class="options">
-                                    <img src="https://img.icons8.com/material-outlined/128/000000/star--v2.png"
-                                        class="icon" />
-                                    <img src="https://img.icons8.com/material-outlined/128/000000/visible--v1.png"
-                                        class="icon" />
-                                    <img src="https://img.icons8.com/material-sharp/128/000000/github.png"
-                                        class="icon" />
-                                </div>
+                        </div>
+                        <div class="project">
+                            <h3>Impossible App</h3>
+                            <p>
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Id, quos? Lorem ipsum dolor
+                                sit
+                                amet. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Obcaecati,
+                                explicabo?
+                            </p>
+                            <div class="options">
+                                <img src="https://img.icons8.com/material-outlined/128/000000/star--v2.png"
+                                    class="icon" />
+                                <img src="https://img.icons8.com/material-outlined/128/000000/visible--v1.png"
+                                    class="icon" />
+                                <img src="https://img.icons8.com/material-sharp/128/000000/github.png" class="icon" />
                             </div>
-                            <div class="project">
-                                <h3>Project 4</h3>
-                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Id, quos? Lorem ipsum dolor
-                                    sit
-                                    amet. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Obcaecati,
-                                    explicabo?
-                                </p>
-                                <div class="options">
-                                    <img src="https://img.icons8.com/material-outlined/128/000000/star--v2.png"
-                                        class="icon" />
-                                    <img src="https://img.icons8.com/material-outlined/128/000000/visible--v1.png"
-                                        class="icon" />
-                                    <img src="https://img.icons8.com/material-sharp/128/000000/github.png"
-                                        class="icon" />
-                                </div>
+                        </div>
+                        <div class="project">
+                            <h3>Easy Peasy App</h3>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Id, quos? Lorem ipsum dolor
+                                sit
+                                amet. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Obcaecati,
+                                explicabo?
+                            </p>
+                            <div class="options">
+                                <img src="https://img.icons8.com/material-outlined/128/000000/star--v2.png"
+                                    class="icon" />
+                                <img src="https://img.icons8.com/material-outlined/128/000000/visible--v1.png"
+                                    class="icon" />
+                                <img src="https://img.icons8.com/material-sharp/128/000000/github.png" class="icon" />
                             </div>
-                            <div class="project">
-                                <h3>Project 5</h3>
-                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Id, quos? Lorem ipsum dolor
-                                    sit
-                                    amet. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Obcaecati,
-                                    explicabo?
-                                </p>
-                                <div class="options">
-                                    <img src="https://img.icons8.com/material-outlined/128/000000/star--v2.png"
-                                        class="icon" />
-                                    <img src="https://img.icons8.com/material-outlined/128/000000/visible--v1.png"
-                                        class="icon" />
-                                    <img src="https://img.icons8.com/material-sharp/128/000000/github.png"
-                                        class="icon" />
-                                </div>
+                        </div>
+                        <div class="project">
+                            <h3>Ad Blocker</h3>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Id, quos? Lorem ipsum dolor
+                                sit
+                                amet. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Obcaecati,
+                                explicabo?
+                            </p>
+                            <div class="options">
+                                <img src="https://img.icons8.com/material-outlined/128/000000/star--v2.png"
+                                    class="icon" />
+                                <img src="https://img.icons8.com/material-outlined/128/000000/visible--v1.png"
+                                    class="icon" />
+                                <img src="https://img.icons8.com/material-sharp/128/000000/github.png" class="icon" />
                             </div>
-                            <div class="project">
-                                <h3>Project 6</h3>
-                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Id, quos? Lorem ipsum dolor
-                                    sit
-                                    amet. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Obcaecati,
-                                    explicabo?
-                                </p>
-                                <div class="options">
-                                    <img src="https://img.icons8.com/material-outlined/128/000000/star--v2.png"
-                                        class="icon" />
-                                    <img src="https://img.icons8.com/material-outlined/128/000000/visible--v1.png"
-                                        class="icon" />
-                                    <img src="https://img.icons8.com/material-sharp/128/000000/github.png"
-                                        class="icon" />
-                                </div>
+                        </div>
+                        <div class="project">
+                            <h3>Money Maker</h3>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Id, quos? Lorem ipsum dolor
+                                sit
+                                amet. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Obcaecati,
+                                explicabo?
+                            </p>
+                            <div class="options">
+                                <img src="https://img.icons8.com/material-outlined/128/000000/star--v2.png"
+                                    class="icon" />
+                                <img src="https://img.icons8.com/material-outlined/128/000000/visible--v1.png"
+                                    class="icon" />
+                                <img src="https://img.icons8.com/material-sharp/128/000000/github.png" class="icon" />
                             </div>
                         </div>
                     </div>
@@ -207,19 +199,17 @@
                                 <h3>Site Maintenance</h3>
                                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Id, quos? Lorem ipsum dolor
                                     sit
-                                    amet.</p>
+                                    amet...</p>
                             </div>
                             <div class="announcement">
                                 <h3>Community Share Day</h3>
-                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Id, quos? Lorem ipsum dolor
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing ipsum dolor
                                     sit
-                                    amet.</p>
+                                    amet...</p>
                             </div>
                             <div class="announcement">
                                 <h3>Update Privacy Policy</h3>
-                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Id, quos? Lorem ipsum dolor
-                                    sit
-                                    amet.</p>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Id, quos?...</p>
                             </div>
                         </div>
                     </div>
@@ -231,8 +221,8 @@
                                     <img src="./images/one-eyed.png" alt="">
                                 </div>
                                 <div class="trending-profile-details">
-                                    <p>Morgan</p>
-                                    <p>Lorem ipsum dolor.</p>
+                                    <p class="username">@tegan</p>
+                                    <p>World Peace Builder</p>
                                 </div>
                             </div>
                             <div class="profile trending-profile">
@@ -240,8 +230,8 @@
                                     <img src="./images/yellow-one-eyed.png" alt="">
                                 </div>
                                 <div class="trending-profile-details">
-                                    <p>Morgan</p>
-                                    <p>Lorem ipsum dolor.</p>
+                                    <p class="username">@morgan</p>
+                                    <p>Super Cool Project</p>
                                 </div>
                             </div>
                             <div class="profile trending-profile">
@@ -249,8 +239,8 @@
                                     <img src="./images/zipper-mouth.png" alt="">
                                 </div>
                                 <div class="trending-profile-details">
-                                    <p>Morgan</p>
-                                    <p>Lorem ipsum dolor.</p>
+                                    <p class="username">@kendall</p>
+                                    <p>Life Changing App</p>
                                 </div>
                             </div>
                             <div class="profile trending-profile">
@@ -258,8 +248,8 @@
                                     <img src="./images/five-eyed.png" alt="">
                                 </div>
                                 <div class="trending-profile-details">
-                                    <p>Morgan</p>
-                                    <p>Lorem ipsum dolor.</p>
+                                    <p class="username">@alex</p>
+                                    <p>No Traffic Maker</p>
                                 </div>
                             </div>
                         </div>
