Change UI color and images
Remove existing images for profiles and add new, better images.
Use a good color theme to enchance the UI.
Use a font family to make the text stand out.
Add hover/focus effects on elements for a better user interaction.

--- a/index.html
+++ b/index.html
@@ -15,45 +15,45 @@
         <div id="navbar">
 
             <div id="logo" class="navbar-item">
-                <img src="https://img.icons8.com/material-sharp/96/000000/dashboard-layout.png" />
+                <img src="https://img.icons8.com/material-sharp/96/F8ECD1/dashboard-layout.png" />
                 <p>Dashboard</p>
             </div>
             <nav>
                 <ul id="nav-list">
                     <li class="navbar-item">
-                        <img src="https://img.icons8.com/material-rounded/96/000000/home.png" />
+                        <img src="https://img.icons8.com/material-rounded/96/F8ECD1/home.png" />
                         <p>Home</p>
                     </li>
                     <li class="navbar-item">
-                        <img src="https://img.icons8.com/small/96/000000/user.png" />
+                        <img src="https://img.icons8.com/small/96/F8ECD1/user.png" />
                         <p>Profile</p>
                     </li>
                     <li class="navbar-item">
-                        <img src="https://img.icons8.com/material-rounded/96/000000/mail.png" />
+                        <img src="https://img.icons8.com/material-rounded/96/F8ECD1/mail.png" />
                         <p>Messages</p>
                     </li>
                     <li class="navbar-item">
-                        <img src="https://img.icons8.com/material-rounded/96/000000/time-machine.png" />
+                        <img src="https://img.icons8.com/material-rounded/96/F8ECD1/time-machine.png" />
                         <p>History</p>
                     </li>
                     <li class="navbar-item">
-                        <img src="https://img.icons8.com/material-rounded/96/000000/tasks.png" />
+                        <img src="https://img.icons8.com/material-rounded/96/F8ECD1/tasks.png" />
                         <p>Tasks</p>
                     </li>
                     <li class="navbar-item">
-                        <img src="https://img.icons8.com/small/96/000000/conference-call.png" />
+                        <img src="https://img.icons8.com/small/96/F8ECD1/conference-call.png" />
                         <p>Communities</p>
                     </li>
                     <li class="navbar-item">
-                        <img src="https://img.icons8.com/material-rounded/96/000000/settings.png" />
+                        <img src="https://img.icons8.com/material-rounded/96/F8ECD1/settings.png" />
                         <p>Settings</p>
                     </li>
                     <li class="navbar-item">
-                        <img src="https://img.icons8.com/small/96/000000/help.png" />
+                        <img src="https://img.icons8.com/small/96/F8ECD1/help.png" />
                         <p>Support</p>
                     </li>
                     <li class="navbar-item">
-                        <img src="https://img.icons8.com/material-rounded/96/000000/security-checked.png" />
+                        <img src="https://img.icons8.com/material-rounded/96/F8ECD1/security-checked.png" />
                         <p>Privacy</p>
                     </li>
                 </ul>
@@ -64,20 +64,24 @@
             <header>
                 <div class="header-sub-section">
                     <div id="search">
-                        <img src="https://img.icons8.com/glyph-neue/96/000000/search--v1.png" class="icon" />
+                        <label for="search-bar">
+                            <img src="https://img.icons8.com/glyph-neue/96/85586F/search--v1.png" class="icon" />
+                        </label>
                         <input type="search" name="search-bar" id="search-bar">
                     </div>
                     <div id="account">
-                        <img src="https://img.icons8.com/material-sharp/96/000000/appointment-reminders--v1.png"
+                        <img src="https://img.icons8.com/material-sharp/96/85586F/appointment-reminders--v1.png"
                             class="icon" />
-                        <img src="./images/yellow-one-eyed.png" alt="" class="icon" />
+                        <div class="profile-picture">
+                            <img src="./images/morgan.jpg" alt="morgan pfp" />
+                        </div>
                         <p class="username">Morgan Oakley</p>
                     </div>
                 </div>
                 <div class="header-sub-section">
                     <div id="admin-profile" class="profile">
                         <div class="profile-picture">
-                            <img src="./images/yellow-one-eyed.png" alt="">
+                            <img src="./images/morgan.jpg" alt="morgan pfp">
                         </div>
                         <div id="greeting">
                             <p>Hi there, </p>
@@ -105,11 +109,11 @@
                                 explicabo?
                             </p>
                             <div class="options">
-                                <img src="https://img.icons8.com/material-outlined/128/000000/star--v2.png"
+                                <img src="https://img.icons8.com/material-outlined/128/F8ECD1/star--v2.png"
                                     class="icon" />
-                                <img src="https://img.icons8.com/material-outlined/128/000000/visible--v1.png"
+                                <img src="https://img.icons8.com/material-outlined/128/F8ECD1/visible--v1.png"
                                     class="icon" />
-                                <img src="https://img.icons8.com/material-sharp/128/000000/github.png" class="icon" />
+                                <img src="https://img.icons8.com/material-sharp/128/F8ECD1/github.png" class="icon" />
                             </div>
                         </div>
                         <div class="project">
@@ -121,11 +125,11 @@
                                 explicabo?
                             </p>
                             <div class="options">
-                                <img src="https://img.icons8.com/material-outlined/128/000000/star--v2.png"
+                                <img src="https://img.icons8.com/material-outlined/128/F8ECD1/star--v2.png"
                                     class="icon" />
-                                <img src="https://img.icons8.com/material-outlined/128/000000/visible--v1.png"
+                                <img src="https://img.icons8.com/material-outlined/128/F8ECD1/visible--v1.png"
                                     class="icon" />
-                                <img src="https://img.icons8.com/material-sharp/128/000000/github.png" class="icon" />
+                                <img src="https://img.icons8.com/material-sharp/128/F8ECD1/github.png" class="icon" />
                             </div>
                         </div>
                         <div class="project">
@@ -137,11 +141,11 @@
                                 explicabo?
                             </p>
                             <div class="options">
-                                <img src="https://img.icons8.com/material-outlined/128/000000/star--v2.png"
+                                <img src="https://img.icons8.com/material-outlined/128/F8ECD1/star--v2.png"
                                     class="icon" />
-                                <img src="https://img.icons8.com/material-outlined/128/000000/visible--v1.png"
+                                <img src="https://img.icons8.com/material-outlined/128/F8ECD1/visible--v1.png"
                                     class="icon" />
-                                <img src="https://img.icons8.com/material-sharp/128/000000/github.png" class="icon" />
+                                <img src="https://img.icons8.com/material-sharp/128/F8ECD1/github.png" class="icon" />
                             </div>
                         </div>
                         <div class="project">
@@ -152,11 +156,11 @@
                                 explicabo?
                             </p>
                             <div class="options">
-                                <img src="https://img.icons8.com/material-outlined/128/000000/star--v2.png"
+                                <img src="https://img.icons8.com/material-outlined/128/F8ECD1/star--v2.png"
                                     class="icon" />
-                                <img src="https://img.icons8.com/material-outlined/128/000000/visible--v1.png"
+                                <img src="https://img.icons8.com/material-outlined/128/F8ECD1/visible--v1.png"
                                     class="icon" />
-                                <img src="https://img.icons8.com/material-sharp/128/000000/github.png" class="icon" />
+                                <img src="https://img.icons8.com/material-sharp/128/F8ECD1/github.png" class="icon" />
                             </div>
                         </div>
                         <div class="project">
@@ -167,11 +171,11 @@
                                 explicabo?
                             </p>
                             <div class="options">
-                                <img src="https://img.icons8.com/material-outlined/128/000000/star--v2.png"
+                                <img src="https://img.icons8.com/material-outlined/128/F8ECD1/star--v2.png"
                                     class="icon" />
-                                <img src="https://img.icons8.com/material-outlined/128/000000/visible--v1.png"
+                                <img src="https://img.icons8.com/material-outlined/128/F8ECD1/visible--v1.png"
                                     class="icon" />
-                                <img src="https://img.icons8.com/material-sharp/128/000000/github.png" class="icon" />
+                                <img src="https://img.icons8.com/material-sharp/128/F8ECD1/github.png" class="icon" />
                             </div>
                         </div>
                         <div class="project">
@@ -182,11 +186,11 @@
                                 explicabo?
                             </p>
                             <div class="options">
-                                <img src="https://img.icons8.com/material-outlined/128/000000/star--v2.png"
+                                <img src="https://img.icons8.com/material-outlined/128/F8ECD1/star--v2.png"
                                     class="icon" />
-                                <img src="https://img.icons8.com/material-outlined/128/000000/visible--v1.png"
+                                <img src="https://img.icons8.com/material-outlined/128/F8ECD1/visible--v1.png"
                                     class="icon" />
-                                <img src="https://img.icons8.com/material-sharp/128/000000/github.png" class="icon" />
+                                <img src="https://img.icons8.com/material-sharp/128/F8ECD1/github.png" class="icon" />
                             </div>
                         </div>
                     </div>
@@ -218,7 +222,7 @@
                         <div id="trending-profiles">
                             <div class="profile trending-profile">
                                 <div class="profile-picture">
-                                    <img src="./images/one-eyed.png" alt="">
+                                    <img src="./images/tegan.jpg" alt="tegan pfp">
                                 </div>
                                 <div class="trending-profile-details">
                                     <p class="username">@tegan</p>
@@ -227,7 +231,7 @@
                             </div>
                             <div class="profile trending-profile">
                                 <div class="profile-picture">
-                                    <img src="./images/yellow-one-eyed.png" alt="">
+                                    <img src="./images/morgan.jpg" alt="morgan pfp">
                                 </div>
                                 <div class="trending-profile-details">
                                     <p class="username">@morgan</p>
@@ -236,7 +240,7 @@
                             </div>
                             <div class="profile trending-profile">
                                 <div class="profile-picture">
-                                    <img src="./images/zipper-mouth.png" alt="">
+                                    <img src="./images/kendall.jpg" alt="kendall pfp">
                                 </div>
                                 <div class="trending-profile-details">
                                     <p class="username">@kendall</p>
@@ -245,7 +249,7 @@
                             </div>
                             <div class="profile trending-profile">
                                 <div class="profile-picture">
-                                    <img src="./images/five-eyed.png" alt="">
+                                    <img src="./images/alex.jpg" alt="alex pfp">
                                 </div>
                                 <div class="trending-profile-details">
                                     <p class="username">@alex</p>
