Add footer for attribution

--- a/index.html
+++ b/index.html
@@ -260,6 +260,20 @@
                     </div>
                 </aside>
             </section>
+
+            <footer>
+                <p>
+                    Made with ❤ by Ruchita
+                </p>
+                <p>
+                    Portrait illustration vector created by
+                    <a href='https://www.freepik.com/vectors/portrait-illustration'>freepik</a>
+                </p>
+                <p>
+                    All Icons from
+                    <a href='https://icons8.com/'>icons8</a>
+                </p>
+            </footer>
         </div>
     </div>
 </body>
